fix spacing

--- a/src/section/Slider/Slider.css
+++ b/src/section/Slider/Slider.css
@@ -60,7 +60,12 @@
   .slider {
     padding: 2rem;
   }
+
   .slider-track {
+    padding: 0;
+  }
+  
+  .slider-logos {
     padding: 0;
   }
 
